# py2quickjs

./: .gitignore  README.md  module.c  pyproject.toml  python2patch.c  setup.py  test_quickjs.py
.circleci/: config.yml
.github/workflows/: main.yml
quickjs/: __init__.py
