[tool.poetry]
name = "py2quickjs"
version = "0.5.0"  # Version in setup.py is used for distributing.
description = "Python wrapper around https://bellard.org/quickjs/"
authors = ["Stone C <un44444444@gmail>"]
packages = [
  { include = "quickjs" }
]

[tool.poetry.dependencies]
python = ">=2.7"

[tool.poetry.dev-dependencies]
yapf = "*"
setuptools = "*"
wheel = "*"
twine = "*"

[build-system]
requires = ["poetry>=1.0.5"]
